content/en/docs/kubernetes-basics/01-Basics/01/multi-container-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container-pod
  labels:
    app: multi-container-example
spec:
  containers:
    - name: curl-container
      image: curlimages/curl
      command: ["sleep", "3600"]
    - name: nginx-container
      image: nginxinc/nginx-unprivileged
      ports:
        - containerPort: 8080
          name: http
# to call: kubectl exec -it multi-container-pod -c curl-container -- curl localhost:8080
