content/en/docs/kubernetes-basics/01-Basics/01/svc-example-frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: example-frontend
  name: example-frontend
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: example-frontend
  type: ClusterIP
