content/en/docs/kubernetes-basics/01-Basics/01/ingress.template.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-frontend
spec:
  rules:
    - host: example-frontend-<namespace>.<appdomain>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: example-frontend
                port: 
                  number: 5000
  tls:
  - hosts:
    - example-frontend-<namespace>.<appdomain>
